--- a/CoffeeShop/Views/Products/Shop.cshtml
+++ b/CoffeeShop/Views/Products/Shop.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<CoffeeShop.Models.Product>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
 
@@ -11,7 +12,7 @@
     @foreach (var item in Model)
     {
         <img height="100" width="100" src="@item.ImageUrl "/>
-        <h3>@item.Name</h3>
+        <a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id"><h3>@item.Name</h3></a>
         <p>@item.Price.ToString("C")</p>
     }
 
