--- a/CoffeeShop/Views/Products/Detail.cshtml
+++ b/CoffeeShop/Views/Products/Detail.cshtml
@@ -1,18 +1,7 @@
-﻿@model CoffeeShop.Models.Product
+﻿@model Product
 
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>Coffee Shop</title>
-</head>
-<body>
-
-    <img src="@Model.ImageUrl" />
-    <h3>@Model.Name</h3>
-    <p>@Model.Detail</p>
-    <h5>@Model.Price.ToString("C")</h5>
-
-</body>
-</html>
+<img src="@Model.ImageUrl" />
+<h3>@Model.Name</h3>
+<p>@Model.Detail</p>
+<h5>@Model.Price.ToString("C")</h5>
