--- a/CoffeeShop/Views/Products/Shop.cshtml
+++ b/CoffeeShop/Views/Products/Shop.cshtml
@@ -1,19 +1,10 @@
-﻿@model IEnumerable<CoffeeShop.Models.Product>
+﻿@model IEnumerable<Product>
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <title>Coffee Shop</title>
-</head>
-<body>
-    <h1>Coffee Shop</h1>
-    @foreach (var item in Model)
-    {
-        <img height="100" width="100" src="@item.ImageUrl "/>
-        <h3>@item.Name</h3>
-        <p>@item.Price.ToString("C")</p>
-    }
-
-</body>
-</html>
+<h1>Coffee Shop</h1>
+@foreach (var item in Model)
+{
+    <img height="100" width="100" src="@item.ImageUrl "/>
+    <a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id"><h3>@item.Name</h3></a>
+    <p>@item.Price.ToString("C")</p>
+}
