--- a/CoffeeShop/Views/Shared/_Layout.cshtml
+++ b/CoffeeShop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@inject IHttpContextAccessor HttpContextAccessor
+@{
+	var cartCount = HttpContextAccessor?.HttpContext?.Session.GetInt32("CartCount") ?? 0;
+}
+
+<!DOCTYPE html>
 <html>
 <head>
 	<!-- Site made with Coffee Shop v5.7.8, https://mobirise.com -->
@@ -62,8 +67,8 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link link text-black show display-4" href="page3.html">
-								<span class="mobi-mbri mobi-mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"><small>(0)</small></span>
+							<a class="nav-link link text-black show display-4" asp-controller="ShoppingCart" asp-action="Index">
+								<span class="mobi-mbri mobi-mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"><small>(@cartCount)</small></span>
 							</a>
 						</li>
 					</ul>
